<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.BusinessRegisterActivity">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Connect To Business Account"
                    android:textSize="21sp"
                    android:textColor="@color/darkbrown"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="50dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/refIdInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/refIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/refralIdhint"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fillRefIdTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refraltext"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/refIdInputLayout"
                    app:layout_constraintEnd_toEndOf="@id/refIdInputLayout"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/adhaarIdInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fillRefIdTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adhaarIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adhaarIdhint"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/spinnerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blackboxborder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/adhaarIdInputLayout"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="18dp"
                    android:padding="7dp"/>

                <Spinner
                    android:id="@+id/depositSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/deposit_item"
                    android:padding="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/adhaarIdInputLayout"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="18dp"/>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="48dp"
                    android:background="@drawable/submitroundborder"
                    android:backgroundTint="@color/darkbrown"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/signuptext2"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerTextView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/businesstext1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintTop_toBottomOf="@+id/registerButton" />

                <TextView
                    android:id="@+id/signInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/signintext2"
                    android:textColor="@color/darkbrown"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/registerButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>